@@ -2,7 +2,10 @@
 #define HOSTINPUT_H
 
 class IMachine;
+#include <QAccelerometer>
 #include <QObject>
+
+QTM_USE_NAMESPACE
 
 class HostInput : public QObject {
     Q_OBJECT
@@ -10,12 +13,17 @@ public:
 	explicit HostInput(IMachine *machine);
 	~HostInput();
 
+	bool isAccelerometerEnabled() const;
+	void setAccelerometerEnabled(bool on);
+
 	void setQuickQuitEnabled(bool on);
 signals:
 	void pauseClicked();
 	void wantClose();
 protected:
 	bool eventFilter(QObject *o, QEvent *e);
+private slots:
+	void accelerometerUpdated();
 private:
 	void processKey(Qt::Key key, bool state);
 	void processTouch(QEvent *e);
@@ -24,6 +32,7 @@ private:
 	IMachine *m_machine;
 	bool m_quickQuitEnabled;
 	int m_keys;
+	QAccelerometer *m_accelerometer;
 };
 
 #endif // HOSTINPUT_H
