@@ -1,0 +1,2 @@
+[classify gaming]
+/opt/emumaster/bin/psx
